# lethe-app

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.ja.md  README.md  Taskfile.yml  compose.yaml  default.toml  pyproject.toml
.claude/: settings.json
.codex/: config.toml
.devcontainer/: devcontainer.json
docker/: default.toml
docs/: architecture.ja.md  architecture.md  setup.ja.md  setup.md  usage.ja.md  usage.md
scripts/: uv_bootstrap.py
src/audios/: __init__.py  __main__.py  cli.py  lethe.py  preprocess.py  recorder.py  session.py  settings.py
src/llm/: __init__.py  cli.py  refine.py  summarize.py  transcribe.py  transcribe_final.py  transcribe_stream.py  whisper_models.py
src/recorder/: __init__.py  __main__.py  cli.py  i18n.py  lethe.py  loopback.py  preprocess.py  session.py  settings.py  theme.py  ui.py
src/scripts/: download_models.py  model_tasks.py  ollama_models.py
taskfiles/: app.yml  qa.yml
tests/audios/: test_lethe.py  test_preprocess.py  test_settings.py
tests/docs/: test_documentation.py
tests/llm/: test_transcribe_final.py  test_transcribe_stream.py  test_whisper_models.py
tests/recorder/: test_lethe.py  test_preprocess.py  test_settings.py
tests/scripts/: test_download_models.py  test_model_tasks.py  test_ollama_models.py
