[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lethe"
version = "0.2.0"
description = "Lethe — desktop voice recorder, transcriber and minutes tool."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Hitoshi Nakanishi", email = "Hitoshi.Nakanishi12345@gmail.com" },
]
dependencies = [
  "faster-whisper>=1.2.1",
  "httpx>=0.27",
  "lameenc>=1.8.2",
  "noisereduce>=3.0.3",
  "numpy>=1.26",
  "scipy>=1.10",
  "sounddevice>=0.5.5",
]

[project.optional-dependencies]
# `python -m audios` (WASAPI speaker-loopback CLI) needs SoundCard on Windows.
loopback = ["soundcard>=0.4.3", 'pywin32>=311; platform_system == "Windows"']
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
lethe = "audios.lethe:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 128

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false
